# cpp-password-manager

./: .gitignore  CMakeLists.txt
cmake/: FindGcrypt.cmake  GNUInstallDirs.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
share/: CMakeLists.txt
share/macosx/: Info.plist.cmake
share/translations/: CMakeLists.txt
src/: CMakeLists.txt  config-keepassx.h.cmake  main.cpp  version.h.cmake
src/core/: Config.cpp  Config.h  Database.cpp  Database.h  DatabaseIcons.cpp  DatabaseIcons.h  Endian.cpp  Endian.h  Entry.cpp  Entry.h  EntryAttachments.cpp  EntryAttachments.h  EntryAttributes.cpp  EntryAttributes.h  EntrySearcher.cpp  EntrySearcher.h  Exporter.h  FilePath.cpp  FilePath.h  Global.h  Group.cpp  Group.h  InactivityTimer.cpp  InactivityTimer.h  ListDeleter.h  Metadata.cpp  Metadata.h  PasswordGenerator.cpp  PasswordGenerator.h  TimeDelta.cpp  TimeDelta.h  TimeInfo.cpp  TimeInfo.h  ToDbExporter.cpp  ToDbExporter.h  Tools.cpp  Tools.h  Translator.cpp  Translator.h  UUID.cpp  (+1 more)
src/crypto/: Crypto.cpp  Crypto.h  CryptoHash.cpp  CryptoHash.h  Random.cpp  Random.h  SymmetricCipher.cpp  SymmetricCipher.h  SymmetricCipherBackend.h  SymmetricCipherGcrypt.cpp  SymmetricCipherGcrypt.h
src/format/: CsvExporter.cpp  CsvExporter.h  KeePass2.h  KeePass2RandomStream.cpp  KeePass2RandomStream.h  KeePass2Reader.cpp  KeePass2Reader.h  KeePass2Repair.cpp  KeePass2Repair.h  KeePass2Writer.cpp  KeePass2Writer.h  KeePass2XmlReader.cpp  KeePass2XmlReader.h  KeePass2XmlWriter.cpp  KeePass2XmlWriter.h
src/gui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  Application.cpp  Application.h  ChangeMasterKeyWidget.cpp  ChangeMasterKeyWidget.h  Clipboard.cpp  Clipboard.h  DatabaseOpenWidget.cpp  DatabaseOpenWidget.h  DatabaseRepairWidget.cpp  DatabaseRepairWidget.h  DatabaseSettingsWidget.cpp  DatabaseSettingsWidget.h  DatabaseTabWidget.cpp  DatabaseTabWidget.h  DatabaseWidget.cpp  DatabaseWidget.h  DatabaseWidgetStateSync.cpp  DatabaseWidgetStateSync.h  DialogWidget.cpp  DialogWidget.h  DragTabBar.cpp  DragTabBar.h  EditWidget.cpp  EditWidget.h  EditWidgetIcons.cpp  EditWidgetIcons.h  EditWidgetProperties.cpp  EditWidgetProperties.h  FileDialog.cpp  FileDialog.h  IconModels.cpp  IconModels.h  LineEdit.cpp  LineEdit.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  (+17 more)
src/gui/entry/: EditEntryWidget.cpp  EditEntryWidget.h  EditEntryWidget_p.h  EntryAttachmentsModel.cpp  EntryAttachmentsModel.h  EntryAttributesModel.cpp  EntryAttributesModel.h  EntryHistoryModel.cpp  EntryHistoryModel.h  EntryModel.cpp  EntryModel.h  EntryView.cpp  EntryView.h
src/gui/group/: EditGroupWidget.cpp  EditGroupWidget.h  GroupModel.cpp  GroupModel.h  GroupView.cpp  GroupView.h
src/keys/: CompositeKey.cpp  CompositeKey.h  CompositeKey_p.h  FileKey.cpp  FileKey.h  Key.h  PasswordKey.cpp  PasswordKey.h
src/streams/: HashedBlockStream.cpp  HashedBlockStream.h  LayeredStream.cpp  LayeredStream.h  QtIOCompressor  StoreDataStream.cpp  StoreDataStream.h  SymmetricCipherStream.cpp  SymmetricCipherStream.h  qtiocompressor.cpp  qtiocompressor.h
tests/: CMakeLists.txt  FailDevice.cpp  FailDevice.h  TestCryptoHash.cpp  TestCryptoHash.h  TestCsvExporter.cpp  TestCsvExporter.h  TestDeletedObjects.cpp  TestDeletedObjects.h  TestEntry.cpp  TestEntry.h  TestEntryModel.cpp  TestEntryModel.h  TestEntrySearcher.cpp  TestEntrySearcher.h  TestExporter.cpp  TestExporter.h  TestGroup.cpp  TestGroup.h  TestGroupModel.cpp  TestGroupModel.h  TestHashedBlockStream.cpp  TestHashedBlockStream.h  TestKeePass2RandomStream.cpp  TestKeePass2RandomStream.h  TestKeePass2Reader.cpp  TestKeePass2Reader.h  TestKeePass2Writer.cpp  TestKeePass2Writer.h  TestKeePass2XmlReader.cpp  TestKeePass2XmlReader.h  TestKeys.cpp  TestKeys.h  TestModified.cpp  TestModified.h  TestRandom.cpp  TestRandom.h  TestSymmetricCipher.cpp  TestSymmetricCipher.h  config-keepassx-tests.h.cmake  (+2 more)
tests/gui/: CMakeLists.txt  TestGui.cpp  TestGui.h  TestGuiPixmaps.cpp  TestGuiPixmaps.h
utils/: CMakeLists.txt  kdbx-extract.cpp
